--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
 
-        <center><img src="C:\Users\eloro\Desktop\code\blog d'un trans\image\drapeau trans.png" style="width: 1900px; height: 300px;"></center>
+        <center><img src="drapeau trans.png" style="width: 1900px; height: 300px;"></center>
 
         <br>
 
