--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Un trans</title>
-        <link rel="stylesheet" href="C:\Users\eloro\Desktop\code\blog d'un trans\index.css">
+        <link rel="stylesheet" href="index.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
