--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
     <nav>
         <ul class="menu">
             <li><a href="index.html">Accueil</a></li>
-            <li><a href="contact.html">Contact</a></li>S
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -27,6 +27,11 @@
         <a href="https://www.instagram.com/codeur_online/" target="_blank">
             Ici !
         </a>
+        <br>
+        <hr>
+        <br>
+        <p>mon adresse e-mail :</p>
+        <a href="mailto:codeur.online41@gmail.com">Ici !</a>
     </div>
     <br>
     <hr>
