--- a/index.html
+++ b/index.html
@@ -18,71 +18,66 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-
-        <center><img src="drapeau trans.png" style="width: 1900px; height: 300px;"></center>
+        <center><img src="C:\Users\eloro\Desktop\code\blog d'un trans\image\drapeau trans.png" style="width: 1890px; height: 300px;"></center>
 
         <br>
 
         <h1>La vie d'un trans !</h1>
 
-        <details>
-            <summary>Présentation de moi à vous !</summary>
-        <p>Alors, moi c'est Elo, j'ai 17 ans à l'heure où j'écris ce texte, </p>
-        <p>je suis trangenre FTM, je suis donc un garçon.</p>
-        <p>Ici, je ne vais pas vous faire des cours sûr la transidentité, </p>
-        <p>je voudrais juste vous partagez mon vécu.</p>
-        <p>Peut-être que vous-vous demandez pourquoi ? Parce que j'aurais voulu tombé </p>
-        <p>sur ce genre de contenu à l'époque où j'ai compris que j'étais moi aussi trans.</p>
-        <p>J'aimerais vous parler des questions que je me posés, des réactions que j'ai eu </p>
-        <p>à certains moments. Mais surtout, j'aimerais normalisé certaines choses.</p>
-        <p>Je compte mettre à jour ce site régulièrement, donc n'hésitez pas à y revenir de temps à autre !</p>
-        </details>
+    <br>
+
+        <h2>Présentation de moi à vous !</h2>
+    <br>
+        <p>Salut, moi c'est Elo, j'ai 17 ans, bientôt 18 ans et je suis transgenre FTM. 
+        Je vais peut-être faire tâche mais je n'ai pas toujours sû que j'étais trans, loin de là, 
+        jusqu'à mes 14 ans j'étais très féminin, je n'étais pas forcément très à l'aise avec mon coprs, 
+        mes je faisait avec, parce que finalemetn ça "devais être comme ça".</p>
+        <p>Qujourd'hui j'ai décidé de créer ce site pour me soulager moi, pour essayer de soulager certaines personnes également et essayer de faire prendre conscience 
+        au gens que non, on ne change pas du jour au lendemain quand on comprend qu'on est trans, pour faire comprendre 
+        qu'on est pas différent de la personne qu'on était avatn de faire son coming-out, ect.</p>
+        <p>Je m'excuse d'avance si la tournure de mes phrases n'est pas parfaite, j'ai envie d'écrire ce que je ressens 
+        sans me sensuré. </p>
+
+
+    <br>
+    <hr>
+    <br>
+
+        <h2>Mon parcours</h2>
+    <br>
+        <p>Comme je vous l'ai déjà dit plus haut, j'ai 17 ans, je crois que j'ai commencé à savoir que j'étais trans vers l'âge de 13 ans, 
+        pour certains c'est très tôt, moi je dirais que c'est assez tard. Quand j'étais plus petit je me trouvais toujours des complexes, 
+        je me trouvais trop gros, je complexé énormément sur ma poitrine, je ne m'aimais pas. Et puis j'ai eu l'âge de commencer les réseaux sociaux, 
+        c'est là que j'ai découvert la transidentité, au début je me reconnaissais beaucoup dans ce qu'ils se montraient à l'époque.
+        Et puis et venu la phase où je me disait en boucle "nan, mais arrête c'est parce que tu vois trop de truc comme ça que ça t'est rentré dans le crâne.
+        Et puis j'ai pris le temps de réfléchir durant plusierus semaines voir mois, je vous avoue que je ne sais plus exactement, je me suis vraiment laissé le temps, 
+        sans me mettre de pression, j'ai commencé à en parler à mes amis les plus proche à l'époque, et ils ont étaient incroyable, ils m'ont tout de suite proposé de me genré 
+        au masculin pour voir si ça me plaisait et comment je me sentait. JE me suis vite rendue compte que ça me rendait joyeux, et de là j'ai commencé à faire mon coming out.</p>
+        <p>Cetains ont compris d'autres pas, la vie est faite ainsi. Mais je me suis pris une claque quand j'ai directement voulu que mon corps change, j'ai fait mon coming-out à tout 
+        juste 15 ans, j'étais donc pas en âge de commencer une transition, et ça m'a détruit de l'intérieur. A savoir que j'était déjà très fragile psychologiquement à ce moment là...
+        Un peu avant mes 16 ans j'ai commencé à en parlé à mes parents, ils n'ont pas voulu comprendre et ne comprennent toujours pas d'aileurs, mais c'est pas grave, 
+        je ferais ma transition avec ou sans eux, et ça c'est ok dans ma tête depuis un moment.</p>
+
+    <br>
+    <hr>
+    <br>
+
+        <h2>La suite ??</h2>
+    <br>    
+        <p>Qu'est ce que je compte faire ensuite ? Je ne sais pas, je sais que je ne compte plus aller aussi vite qu'au début, je veut prendre mon temps et être sûr de ne rien regretter.</p>
+        <p>Ce qui est sûr c'est que je ne compte pas avoir l'accord des autres pour faire ce que j'ai envie et besoin de faire sur mon corps pour me sentir en accord avec lui !</p>
 
         <br>
+        <hr>
         <br>
 
-        <details>
-            <summary>Comment j'ai sû que j'était transgenre ?</summary>
-        <p>Bon, concraitement à beaucoup de personne trans qui sont sur les réseaux sociaux, </p>
-        <p>je ne l'ai pas compris dès tout petit, mais "seulement" entre <b>gros</b> guillemet </p>
-        <p>vers l'âge de 13 ans. Je suis passé par pas mal d'étape avant de dire que j'était trans.</p>
-        <p>Peut-être parce que je ne voulais pas l'accepter moi-même. Enfin bref, je suis passé par </p>
-        <p>demi-girl, ensuite non-binaire, demi-boy, et après quelques aller retour entre ces trois là, </p>
-        <p>j'ai réussi à passer le cap et à me dire transgenre FTM, et croyer moi, c'est une sacrée étape </p>
-        <p>que j'ai réussi à franchir.</p>
-        </details>
+        <h2>Concernat les mises à jour ?</h2>
+    <br>
+        <p>Je vais mettre se site à jour autant que possible, je vous donnerais des nouvelles et continuerais de faire évoluer blog d'un trans autant que possible.</p>
 
-        <br>
-        <br>
-
-        <details>
-            <summary>Ensuite ??</summary>
-        <p>Ensuite, j'ai commencé à faire mon coming-out, beaucoup d'ami de longue datte n'ont pas </p>
-        <p>voulu comprendre, je les ai fait sortir de ma vie, ceux qui ont compris sont resté.</p>
-        <p>Je peut vous assurer que faire un coming-out permet de faire un réel trie dans ses amies.</p>
-        <p>Quand j'ai fait mon coming-out à ma famille, certains on compris tout de suite, d'autres au bout de 4 ans </p>
-        <p>ne comprennent toujours pas, et c'est pas grave </p>
-        </details>
-
-        <br>
-        <br>
-
-        <details>
-            <summary>Comment je vais mentalement ?</summary>
-        <p>Mentalement c'est très compliqué. Supporté la non-éducation de certaines personnes et très dure...</p>
-        <p>Malgré ça je fait au mieux que je peut, et j'essaie de rester debout.</p>
-        <p>La dysphorie de genre qui était elle très présente au début, ne l'est quasiment plus maintenant.</p>
-        <p>Ma vie sociale à pris un gros coup notamment à cause de la dysphorie, j'essaie de faire de mon mieux, mais ça reste compliqué parfois.</p>
-        </details>
-
-        <br>
-        <br>
-
-        <details>
-            <summary>Comment me contacter ?</summary>
-        <p>Je vous laisses aller dans le menu en haut et cliquer sur "contact".</p>
-        <p>Vous pourrez m'envoyer un message via instagram, je ferais en sorte d'y répondre le plus vite possible.</p>
-        </details>
-
+        <h2>Contact</h2>
+    <br>
+        <p>Je vous laisses me contacter si vous avez des questions, par Instagram ou par e-mail, comme vous le souhaitez !</p>
+    <br>
     </body>
 </html>
