correction fautes d'othographes

--- a/index.html
+++ b/index.html
@@ -18,66 +18,72 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
-        <center><img src="C:\Users\eloro\Desktop\code\blog d'un trans\image\drapeau trans.png" style="width: 1890px; height: 300px;"></center>
 
-        <br>
-
-        <h1>La vie d'un trans !</h1>
+    <center><img src="drapeau trans.png" style="width: 1890px; height: 300px;"></center>
 
     <br>
 
-        <h2>Présentation de moi à vous !</h2>
-    <br>
-        <p>Salut, moi c'est Elo, j'ai 17 ans, bientôt 18 ans et je suis transgenre FTM. 
-        Je vais peut-être faire tâche mais je n'ai pas toujours sû que j'étais trans, loin de là, 
-        jusqu'à mes 14 ans j'étais très féminin, je n'étais pas forcément très à l'aise avec mon coprs, 
-        mes je faisait avec, parce que finalemetn ça "devais être comme ça".</p>
-        <p>Qujourd'hui j'ai décidé de créer ce site pour me soulager moi, pour essayer de soulager certaines personnes également et essayer de faire prendre conscience 
-        au gens que non, on ne change pas du jour au lendemain quand on comprend qu'on est trans, pour faire comprendre 
-        qu'on est pas différent de la personne qu'on était avatn de faire son coming-out, ect.</p>
-        <p>Je m'excuse d'avance si la tournure de mes phrases n'est pas parfaite, j'ai envie d'écrire ce que je ressens 
-        sans me sensuré. </p>
-
+    <h1>La vie d'un trans !</h1>
 
     <br>
-    <hr>
-    <br>
 
-        <h2>Mon parcours</h2>
+    <h2>Présentation de moi à vous !</h2>
     <br>
-        <p>Comme je vous l'ai déjà dit plus haut, j'ai 17 ans, je crois que j'ai commencé à savoir que j'étais trans vers l'âge de 13 ans, 
-        pour certains c'est très tôt, moi je dirais que c'est assez tard. Quand j'étais plus petit je me trouvais toujours des complexes, 
-        je me trouvais trop gros, je complexé énormément sur ma poitrine, je ne m'aimais pas. Et puis j'ai eu l'âge de commencer les réseaux sociaux, 
-        c'est là que j'ai découvert la transidentité, au début je me reconnaissais beaucoup dans ce qu'ils se montraient à l'époque.
-        Et puis et venu la phase où je me disait en boucle "nan, mais arrête c'est parce que tu vois trop de truc comme ça que ça t'est rentré dans le crâne.
-        Et puis j'ai pris le temps de réfléchir durant plusierus semaines voir mois, je vous avoue que je ne sais plus exactement, je me suis vraiment laissé le temps, 
-        sans me mettre de pression, j'ai commencé à en parler à mes amis les plus proche à l'époque, et ils ont étaient incroyable, ils m'ont tout de suite proposé de me genré 
-        au masculin pour voir si ça me plaisait et comment je me sentait. JE me suis vite rendue compte que ça me rendait joyeux, et de là j'ai commencé à faire mon coming out.</p>
-        <p>Cetains ont compris d'autres pas, la vie est faite ainsi. Mais je me suis pris une claque quand j'ai directement voulu que mon corps change, j'ai fait mon coming-out à tout 
-        juste 15 ans, j'étais donc pas en âge de commencer une transition, et ça m'a détruit de l'intérieur. A savoir que j'était déjà très fragile psychologiquement à ce moment là...
-        Un peu avant mes 16 ans j'ai commencé à en parlé à mes parents, ils n'ont pas voulu comprendre et ne comprennent toujours pas d'aileurs, mais c'est pas grave, 
-        je ferais ma transition avec ou sans eux, et ça c'est ok dans ma tête depuis un moment.</p>
+    <p>Salut, moi c'est Elo, j'ai 17 ans, bientôt 18 ans et je suis transgenre FTM. 
+    Je vais peut-être faire tâche mais je n'ai pas toujours su que j'étais trans, loin de là. 
+    Jusqu'à mes 14 ans, j'étais très féminine. Je n'étais pas forcément très à l'aise avec mon corps, 
+    mais je faisais avec, parce que finalement ça "devait être comme ça".</p>
+    
+    <p>Aujourd'hui, j'ai décidé de créer ce site pour me soulager moi-même, pour essayer de soulager certaines personnes également, et pour essayer de faire prendre conscience 
+    aux gens que non, on ne change pas du jour au lendemain quand on comprend qu'on est trans. Pour faire comprendre 
+    qu'on n'est pas différent de la personne qu'on était avant de faire son coming-out, etc.</p>
+
+    <p>Je m'excuse d'avance si la tournure de mes phrases n'est pas parfaite. J'ai envie d'écrire ce que je ressens 
+    sans me censurer.</p>
 
     <br>
     <hr>
     <br>
 
-        <h2>La suite ??</h2>
+    <h2>Mon parcours</h2>
+    <br>
+    <p>Comme je vous l'ai déjà dit plus haut, j'ai 17 ans. Je crois que j'ai commencé à comprendre que j'étais trans vers l'âge de 13 ans. 
+    Pour certains, c'est très tôt, moi je dirais que c'est assez tard. Quand j'étais plus jeune, je me trouvais toujours des complexes : 
+    je me trouvais trop gros, je complexais énormément sur ma poitrine, je ne m'aimais pas. Puis, j'ai commencé à utiliser les réseaux sociaux, 
+    et c'est là que j'ai découvert la transidentité. Au début, je me reconnaissais beaucoup dans ce qui se montrait à l'époque.
+    </p>
+
+    <p>Ensuite est venue la phase où je me disais en boucle "Non, mais arrête, c'est parce que tu vois trop de trucs comme ça que ça t'est rentré dans le crâne."
+    Puis j'ai pris le temps de réfléchir pendant plusieurs semaines, voire des mois. Je vous avoue que je ne sais plus exactement. Je me suis vraiment laissé du temps, 
+    sans me mettre de pression. J'ai commencé à en parler à mes amis les plus proches à l'époque, et ils ont été incroyables. Ils m'ont tout de suite proposé de me genrer 
+    au masculin pour voir si ça me plaisait et comment je me sentais. Je me suis vite rendu compte que cela me rendait heureux, et de là, j'ai commencé à faire mon coming-out.</p>
+
+    <p>Certaines personnes ont compris, d'autres non, la vie est ainsi. Mais j'ai pris une claque quand j'ai immédiatement voulu que mon corps change. J'ai fait mon coming-out à tout 
+    juste 15 ans, donc je n'étais pas en âge de commencer une transition, et ça m'a détruit de l'intérieur. À savoir que j'étais déjà très fragile psychologiquement à ce moment-là...
+    Un peu avant mes 16 ans, j'ai commencé à en parler à mes parents. Ils n'ont pas voulu comprendre et ne comprennent toujours pas d'ailleurs, mais ce n'est pas grave. 
+    Je ferai ma transition avec ou sans eux, et ça, c'est ok dans ma tête depuis un moment.</p>
+
+    <br>
+    <hr>
+    <br>
+
+    <h2>La suite ??</h2>
     <br>    
-        <p>Qu'est ce que je compte faire ensuite ? Je ne sais pas, je sais que je ne compte plus aller aussi vite qu'au début, je veut prendre mon temps et être sûr de ne rien regretter.</p>
-        <p>Ce qui est sûr c'est que je ne compte pas avoir l'accord des autres pour faire ce que j'ai envie et besoin de faire sur mon corps pour me sentir en accord avec lui !</p>
+    <p>Qu'est-ce que je compte faire ensuite ? Je ne sais pas. Je sais que je ne veux plus aller aussi vite qu'au début. Je veux prendre mon temps et être sûr de ne rien regretter.</p>
+    <p>Ce qui est sûr, c'est que je ne compte pas avoir l'accord des autres pour faire ce que j'ai envie et besoin de faire à mon corps pour me sentir en accord avec lui !</p>
 
-        <br>
-        <hr>
-        <br>
-
-        <h2>Concernat les mises à jour ?</h2>
     <br>
-        <p>Je vais mettre se site à jour autant que possible, je vous donnerais des nouvelles et continuerais de faire évoluer blog d'un trans autant que possible.</p>
-
-        <h2>Contact</h2>
+    <hr>
     <br>
-        <p>Je vous laisses me contacter si vous avez des questions, par Instagram ou par e-mail, comme vous le souhaitez !</p>
+
+    <h2>Concernant les mises à jour ?</h2>
+    <br>
+    <p>Je vais mettre ce site à jour autant que possible, je vous donnerai des nouvelles et continuerai de faire évoluer "Le blog d'un trans" autant que possible.</p>
+
+    <h2>Contact</h2>
+    <br>
+    <p>Je vous laisse me contacter si vous avez des questions, par Instagram ou par e-mail, comme vous le souhaitez !</p>
+
     <br>
     </body>
 </html>
