--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
 
-    <center><img src="images/drapeau_trans.png" style="width: 1890px; height: 300px;"></center>
+    <center><img src="images/drapeau_trans.png" style="max-width: 100%; height: auto;"></center>
 
     <br>
 
