--- a/index.html
+++ b/index.html
@@ -67,6 +67,18 @@
     <hr>
     <br>
 
+    <h2>Note du 31/08/24 :</h2>
+    <br>
+    <p>(Oui maintenant je me crois dans mon journal intime !)</p>
+    <p>Dès fois je me dit que je suis peut-être top gentil avec les gens quand ils me mégenrent volontairement, et en vrai c'est pas si faux que ça.</p>
+    <p>Je ne sais pas pourquoi, mais je comprend les gens qui me manques de respect... Je le cautionne à tel point que je me sent de moins en moins légitime de me dire transgenre.</p>
+    <p>Peut-être est-ce par peur de perdre les gens auquels je tiens profondément, peut-être que c'est simplement parce que je n'est plus aucun respect ppur moi-même, parce que justement on m'a trop manqué de respect. Ou peut-être les deux et d'autres choses encore.</p>
+    <p>Je vous avourez que ce soir je n'ai pas la solution à cette réflexion.</p>
+    <p>y a aussi le fait que pour pas mal de monde ça commence entre très gros guillemets à devenir "banale" le fait que je soit trans, et par rapport à ça je ne sais pas trop comment réagir.</p>
+    <p>A la fois j'aime le fait que les gens puissent oublié le fait que je soit trans et en même temps je déteste la sensation, c'est comme-ci toutes mes souffrances était oublié, et je déteste ça.</p>
+    <p>Je sais que ce n'est pas forcément comme ça qu'il faudrais que je le vois, mais pour le moment je n'ai pas assez de recule pour le voir autrement.</p>
+
+
     <h2>La suite ??</h2>
     <br>    
     <p>Qu'est-ce que je compte faire ensuite ? Je ne sais pas. Je sais que je ne veux plus aller aussi vite qu'au début. Je veux prendre mon temps et être sûr de ne rien regretter.</p>
@@ -78,7 +90,7 @@
 
     <h2>Concernant les mises à jour ?</h2>
     <br>
-    <p>Je vais mettre ce site à jour autant que possible, je vous donnerai des nouvelles et continuerai de faire évoluer "Le blog d'un trans" autant que possible.</p>
+    <p>Je vais mettre ce site à jour autant que possible, je vous donnerai des nouvelles et continuerai de faire évoluer "Le blog d'un trans" autant que possible. (Dernière mise à jour le : 31/08/24) </p>
 
     <h2>Contact</h2>
     <br>
@@ -87,3 +99,6 @@
     <br>
     </body>
 </html>
+
+
+<!--Par : elo -->
