--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <p>Je ne sais pas pourquoi, mais je comprend les gens qui me manques de respect... Je le cautionne à tel point que je me sent de moins en moins légitime de me dire transgenre.</p>
     <p>Peut-être est-ce par peur de perdre les gens auquels je tiens profondément, peut-être que c'est simplement parce que je n'est plus aucun respect ppur moi-même, parce que justement on m'a trop manqué de respect. Ou peut-être les deux et d'autres choses encore.</p>
     <p>Je vous avourez que ce soir je n'ai pas la solution à cette réflexion.</p>
-    <p>y a aussi le fait que pour pas mal de monde ça commence entre très gros guillemets à devenir "banale" le fait que je soit trans, et par rapport à ça je ne sais pas trop comment réagir.</p>
+    <p>Il y a aussi le fait que pour pas mal de monde ça commence entre très gros guillemets à devenir "banale" le fait que je soit trans, et par rapport à ça je ne sais pas trop comment réagir.</p>
     <p>A la fois j'aime le fait que les gens puissent oublié le fait que je soit trans et en même temps je déteste la sensation, c'est comme-ci toutes mes souffrances était oublié, et je déteste ça.</p>
     <p>Je sais que ce n'est pas forcément comme ça qu'il faudrais que je le vois, mais pour le moment je n'ai pas assez de recule pour le voir autrement.</p>
 
@@ -82,10 +82,11 @@
     <hr>
     <br>
 
-    <h2>La suite ??</h2>
+    <h2>Note du 16/11/24 :</h2>
     <br>    
-    <p>Qu'est-ce que je compte faire ensuite ? Je ne sais pas. Je sais que je ne veux plus aller aussi vite qu'au début. Je veux prendre mon temps et être sûr de ne rien regretter.</p>
-    <p>Ce qui est sûr, c'est que je ne compte pas avoir l'accord des autres pour faire ce que j'ai envie et besoin de faire à mon corps pour me sentir en accord avec lui !</p>
+    <p>Je suis majeur depuis quelques semaines. Je n'ose pas commencé les procédures à cause de mes parents parce que je dépends encore d'eux financièrement.</p>
+    <p>J'aimerais changé de prénom et entammé les recherches pour trouvé un endocrinologue, mais pour le moment je ne peut pas.</p>
+    <p>Je me sent comme bloqué dans l'avancé de ma transition et très honnêtement je me sent fatigué de tout ça.</p>
 
     <br>
     <hr>
